# LogcatToolForWin

./: .gitignore  README.md  logcat-tool-for-win.spec  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-18-logcat-tool-for-win.md
docs/superpowers/specs/: 2026-06-18-logcat-tool-for-win-design.md
scripts/: __init__.py  build_portable.py
src/logcat_tool_for_win/: __main__.py  adb.py  config.py  devices.py  export.py  filters.py  gui.py  highlight.py  log_stream.py  models.py  presets.py
tests/: conftest.py  test_adb.py  test_build_portable.py  test_ci_workflow.py  test_devices.py  test_filters_highlight.py  test_gui_helpers.py  test_log_stream.py  test_models_and_config.py  test_package_smoke.py  test_presets_export.py  test_python38_compat.py  test_readme.py
